--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<div class="container-fluid" style="max-width: 800px">
+<div class="container-fluid" style="max-width: 800px; justify-content: flex-start;">
 
 <h3> Hello, I'm Braeton Buckley</h3>
 <h4> I'm a Software Engineer with 3 YOE at <a href="https://jetheaddev.com">JetHead Development Inc.</a>
