--- a/resume.html
+++ b/resume.html
@@ -31,8 +31,8 @@
     </div>
   </div>
 </nav>
-  <div class='embed-responsive' style='padding: 10%'>
-    <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
+  <div class='embed-responsive' style='padding-bottom: 50%'>
+    <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf">
       <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
     </object>
   </div>
