--- a/workExperience.html
+++ b/workExperience.html
@@ -32,15 +32,15 @@
   </div>
 </nav>
 
-<div class="container-fluid" style="max-width: 800px">
+<div class="container-fluid" style="max-width: 800px; justify-content: flex-start;">
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href=https://www.jetheaddev.com/"><img src="pictures/jethead_logo.png" class="img-responsive" alt="JetHead" width="130" height="40"></a>
       </div>  
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://www.directv.com"><img src="pictures/directv_logo.svg" class="img-responsive" alt="DirecTV" width="130" height="40"></a>
       </div>
     </div>
@@ -65,13 +65,13 @@
     <p style="margin-left: 40;"><i>Contact info can be requested from Braeton Buckley, or directly from <a href="https://www.jetheaddev.com/#contact" target="_blank">JetHead</a>.</i></p>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://www.jaclpsw.org/" target="_blank"><img src="pictures/pswlogo.png" class="img-responsive" alt="PSW" width="120" height="60"></a>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://jacl.org/" target="_blank"><img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60"></a>
       </div>
     </div>
@@ -85,10 +85,10 @@
     <h5 style="margin-left: 30;">Jennifer Betancourt, Youth Advisor, Riverside JACL</h5>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://incsocal.weebly.com/about.html" target="_blank">Intercollegiate Nikkei Council</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://incsocal.weebly.com/about.html" target="_blank"><img src="pictures/inc.jpg" class="img-responsive" alt="INC" width="60" height="60"></a>
       </div>
     </div>
@@ -98,10 +98,10 @@
       network between NSUs, and manage their respective NSUs totaling 1000+ general members.</p>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank">UCR Nikkei Student Union</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank"><img src="pictures/ucrnsu.jpeg" class="img-responsive" alt="UCRNSU" width="60" height="60"></a>
       </div>
     </div>
@@ -111,7 +111,7 @@
       Managed a board of 9 individuals who worked together to run UCR NSU with 100+ active members.</p>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://goo.gl/maps/sr11Z84DwdpBKzCG6" target="_blank">The Laptop Experts</a></h3>
       </div>
     </div>
