--- a/resume.html
+++ b/resume.html
@@ -31,11 +31,9 @@
     </div>
   </div>
 </nav>
-  <div class='embed-responsive embed'>
-    <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="800px">
-      <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
-    </object>
-  </div>
+  <object class='embed-responsive object' data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf">
+    <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
+  </object>
 
 </body>
 </html>
