--- a/resume.html
+++ b/resume.html
@@ -32,10 +32,10 @@
   </div>
 </nav>
 <div class="container-fluid">
-  <object class='embed-responsive object' data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf">
+  <object class='embed-responsive object' data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
-  <p>test2</p>
+  <p>test3</p>
 </div>
 
 </body>
