--- a/resume.html
+++ b/resume.html
@@ -32,10 +32,10 @@
   </div>
 </nav>
 <div class="embed-responsive">
-  <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
+  <object class="embed-responsive object" data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
-  <p>test4</p>
+  <p>test5</p>
 </div>
 
 </body>
