--- a/resume.html
+++ b/resume.html
@@ -31,9 +31,9 @@
     </div>
   </div>
 </nav>
-<p>test6</p>
-<div class="embed-responsive">
-  <object class="embed-responsive object" data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%" style="padding-bottom: 150%;">
+<p>test7</p>
+<div class="embed-responsive" style="padding-bottom: 150%;">
+  <object class="embed-responsive object" data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
 </div>
