--- a/resume.html
+++ b/resume.html
@@ -31,8 +31,8 @@
     </div>
   </div>
 </nav>
-<p>test7</p>
-<div class="embed-responsive" style="padding-bottom: 150%;">
+<p>test8</p>
+<div class="embed-responsive" style="position: absolute;">
   <object class="embed-responsive object" data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
