--- a/resume.html
+++ b/resume.html
@@ -31,9 +31,9 @@
     </div>
   </div>
 </nav>
-<p>test13</p>
-<div class="embed-responsive" style="padding-bottom: 10%; overflow: visible; width: 100%; height: 100%; background: green;">
-  <object class="embed-responsive object" data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" style="width: 100%; height: 100%; overflow: visible; background: blue;">
+<p>test14</p>
+<div style="padding-bottom: 10%; overflow: visible; width: 100%; height: 100%; background: green;">
+  <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" style="width: 100%; height: 100%; overflow: visible; background: blue;">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
 </div>
