--- a/resume.html
+++ b/resume.html
@@ -31,9 +31,9 @@
     </div>
   </div>
 </nav>
-<p>test14</p>
-<div style="padding-bottom: 10%; overflow: visible; width: 100%; height: 100%; background: green;">
-  <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" style="width: 100%; height: 100%; overflow: visible; background: blue;">
+<p>test16</p>
+<div style="position: absolute; padding-bottom: 10%; overflow: visible; width: 100%; height: 100%; background: green;">
+  <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" style="position: absolute; width: 100%; height: 100%; overflow: visible; background: blue;">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
 </div>
