--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-<body style="height: 100%; background: red;">
+<body>
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -31,9 +31,8 @@
     </div>
   </div>
 </nav>
-<p>test16</p>
-<div style="position: absolute; padding-bottom: 10%; overflow: visible; width: 100%; height: 100%; background: green;">
-  <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" style="position: absolute; width: 100%; height: 100%; overflow: visible; background: blue;">
+<div style="position: absolute; width: 100%; height: 100%;">
+  <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" style="position: absolute; width: 100%; height: 100%;">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
 </div>
