--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,10 @@
 <h3><b> Phone:</b> 714-904-2063</h3>
 <div class="row">
   <div class="col-xs-6 col-md-1">  
-    <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.png" class="img-responsive" alt="LinkedIn" width="100" height="100"></a>
+    <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.jpg" class="img-responsive" alt="LinkedIn" width="100" height="100"></a>
   </div>  
   <div class="col-xs-6 col-md-1">  
-    <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.png" class="img-responsive" alt="GitHub" width="100" height="100"></a>
+    <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.jfif" class="img-responsive" alt="GitHub" width="100" height="100"></a>
   </div>
 </div>
 
