--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <h3 style="margin-left: 10;">Hello, I'm Braeton Buckley</h3>
     </div>
     <div class="col-xs-6 col-md-1">  
-        <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.jpg" class="img-responsive" alt="LinkedIn" width="100" height="100"></a>
+        <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.jpg" class="img-responsive" alt="LinkedIn" width="40" height="40"></a>
     </div>  
     <div class="col-xs-6 col-md-1">  
-        <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.png" class="img-responsive" alt="GitHub" width="100" height="100"></a>
+        <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.png" class="img-responsive" alt="GitHub" width="40" height="40"></a>
     </div>
 </div>
 <div style="user-select: none; -webkit-user-select: none; -moz-user-select: none;">
@@ -53,7 +53,7 @@
 <script src="scripts/snake.js"></script>
 
 </div>
-<p>(Swipe or use WASD or arrow keys to move)</p>
+<caption style="text-align:center">(Swipe or use WASD or arrow keys to move)</caption>
 
 </body>
 </html>
