--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       <ul class="nav navbar-nav">
           <li><a href="home.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="workExperience.html">Work Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li class="active"><a href="contact.html">Contact Me</a></li>
       </ul>
