--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Braeton Buckley's Work Experience</title>
+    <title>Braeton Buckley's Experience</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
       <ul class="nav navbar-nav">
           <li><a href="home.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li class="active"><a href="workExperience.html">Work Experience</a></li>
+          <li class="active"><a href="experience.html">Experience</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact Me</a></li>
       </ul>
@@ -33,6 +33,16 @@
 </nav>
 
 <div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-3">
+      <h3 style="margin-left: 10;"><a href="https://www.myinnoacademy.com/about/ourvision" target="_blank">Innovation Academy</a></h3>
+    </div>
+    <div class="col-xs-6 col-md-1">  
+      <a href="https://www.myinnoacademy.com/about/ourvision" target="_blank"><img src="pictures/innovation_logo.png" class="img-responsive" alt="Innovation" width="120" height="60"></a>
+    </div>
+  </div>
+  <h4 style="margin-left: 20;">Math & Computer Science Tutor | Fullerton, CA | December 2023 - Present</h4>
+  <p style="margin-left: 30;">Part-time tutor K-8 students in Math and Computer Science concepts.</p>
     <div class="row">
       <div class="col-xs-12 col-md-3">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
@@ -83,6 +93,22 @@
     and implements strategies to effect positive social change, particularly to the Asian Pacific American Community.</p>
     <h4 style="margin-left: 20;">References</h4>
     <h5 style="margin-left: 30;">Jennifer Betancourt, Youth Advisor, Riverside JACL</h5>
+    <hr>
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <h3 style="margin-left: 10;"><a href="https://www.ucr.edu/" target="_blank">University of California, Riverside</a></h3>
+      </div>
+      <div class="col-xs-6 col-md-1">  
+        <a href="https://www.ucr.edu/" target="_blank"><img src="pictures/ucr_logo.png" class="img-responsive" alt="UCR" width="60" height="60"></a>
+      </div>
+    </div>
+    <h4 style="margin-left: 20;">Bachelors in Computer Science | UCR | 2015 - 2019</h4>
+    <b>Relevant Coursework:</b>
+    <p style="margin-left: 30;">Software Construction, Discrete Structures, Data Structures & Algorithms, Automata & Formal Languages, 
+      Compiler Design, Design of Operating Systems, Concurrent Programming & Parallel Systems,
+      Design & Architecture of Computer Systems, Database Management Systems, Artificial Intelligence,
+      Machine Learning & Data Mining, Software Engineering, Unix System Administration, Embedded Systems,
+      Technical Communications, Virtual Reality</p>
     <hr>
     <div class="row">
       <div class="col-xs-12 col-md-3">
