--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="home.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="workExperience.html">Work Experience</a></li>
+            <li><a href="experience.html">Experience</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
