--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
       <ul class="nav navbar-nav">
           <li><a href="home.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="workExperience.html">Work Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
           <li class="active"><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact Me</a></li>
       </ul>
@@ -33,6 +33,13 @@
 </nav>
 
 <div class="container-fluid">
+
+  <h4> <a href="https://thunderstore.io/c/lethal-company/p/KallenXCC/SideQuests/" target="_blank">SideQuests</a> | <a href="https://store.steampowered.com/app/1966720/Lethal_Company/" target="_blank">LethalCompany</a> | 2024</h4>
+  <h5> Tools: C#, HarmonyX, BepInEx, UnityNetcode, Visual Studio</h5>
+    <p> Published SideQuests mod with 300+ downloads for Lethal Company PC game to Thunderstore.
+      Created Collect, Kill, and Secret Quests that contribute to player credits and quota.
+      Patched class behavior using HarmonyX, BepInEx, and UnityNetcode.
+    </p>
 
   <h4> Reconnect in Standby | JetHead, DirecTV, ATT | 2023</h4>
   <h5> Tools: C++, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
@@ -44,7 +51,7 @@
   <h4> QR Code Troubleshooting | JetHead, DirecTV, ATT | 2022</h4>
   <h5> Tools: C++, JSON, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
   <p> Embedded QR codes into Video Connection Lost troubleshooting screens for the DirecTV Genie Mini to reduce calls to Customer Care.
-    Scanning QR codes redirected to additional <a href="https://www.directv.com/support/satellite/article/KM1453756">troubleshooting help sites</a>.
+    Scanning QR codes redirected to additional <a href="https://www.directv.com/support/satellite/article/KM1453756" target="_blank">troubleshooting help sites</a>.
     There were different QR Codes and troubleshooting flows based on the error codes: 61x for wireless, and 62x for wired.
     Reviewed troubleshooting flow for better client and customer understanding.
   </p>
@@ -52,34 +59,34 @@
 <h4> Free Memory Tracking KPIs | JetHead, DirecTV, ATT | 2021</h4>
 <h5> Tools: C++, NewRelic, Visual Studio, Jenkins, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
   <p> Created KPIs to track the CPU usage and free memory for the DirecTV Genie Mini.
-    The data was collected on <a href="https://docs.newrelic.com/">New Relic</a> and organized into dashboards for viewing by ATT.
+    The data was collected on <a href="https://docs.newrelic.com/" target="_blank">New Relic</a> and organized into dashboards for viewing by ATT.
     The dashboards sorted the data based on hardware make/model and software version.
     ATT could use this data to identify possible problematic software updates both in the field and in test environments.
   </p>
 
 <hr>
 
-<h4><a href="https://github.com/KallenXCC/VR-Project">Ordinary Wizarding Levels (VR Game)</a> | UCR | 2019</h4>
+<h4><a href="https://github.com/KallenXCC/VR-Project" target="_blank">Ordinary Wizarding Levels (VR Game)</a> | UCR | 2019</h4>
 <h5>Tools: C#, Unity, Oculus</h5>
   <p>VR game created for our VR class project. Consisted of using wand motion to cast spells to defeat approaching enemies.
     Individually focused on enemy AI. Group work on motion controls and environment construction.
   </p>
 
-<h4><a href="https://github.com/KallenXCC/Database-Management-Project">Database Management Project</a> | UCR | 2018</h4>
+<h4><a href="https://github.com/KallenXCC/Database-Management-Project" target="_blank">Database Management Project</a> | UCR | 2018</h4>
 <h5>Tools: Java, TSQL, Shell</h5>
   <p>Simple database consisting of Customer, Cars, Mechanic, and Service Requests.</p>
 
-<h4><a href="https://youtu.be/1tQ7aReRmcI">Fly Dot</a> | UCR | 2017</h4>
+<h4><a href="https://youtu.be/1tQ7aReRmcI" target="_blank">Fly Dot</a> | UCR | 2017</h4>
 <h5>Tools: C, Objective-C, ATMega1284</h5>
-  <p><a href="https://github.com/KallenXCC/Embedded-Systems-Project">Embedded systems project</a> created to run with hardware on a breadboard.</p>
+  <p><a href="https://github.com/KallenXCC/Embedded-Systems-Project" target="_blank">Embedded systems project</a> created to run with hardware on a breadboard.</p>
 
 <hr>
 
-<h4><a href="https://github.com/KallenXCC/Platformer-Project">CitrusRPG</a> | Citrus Hack | 2015</h4>
+<h4><a href="https://github.com/KallenXCC/Platformer-Project" target="_blank">CitrusRPG</a> | Citrus Hack | 2015</h4>
 <h5>Tools: Java, Greenfoot</h5>
   <p>Platformer game created at UCR's Citrus Hack.</p>
 
-<h4><a href="https://github.com/KallenXCC/APCompSciProj">Rock Collector</a> | Troy Tech | 2013</h4>
+<h4><a href="https://github.com/KallenXCC/APCompSciProj" target="_blank">Rock Collector</a> | Troy Tech | 2013</h4>
 <h5>Tools: Java, Greenfoot</h5>
   <p>A spin on Asteroids where you shoot aliens and collect rocks for your company. Featuring 3 levels with music, SFX, and animation. </p>
 
