--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
       <ul class="nav navbar-nav">
           <li><a href="home.html">Home</a></li>
           <li class="active"><a href="resume.html">Resume</a></li>
-          <li><a href="workExperience.html">Work Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact Me</a></li>
       </ul>
@@ -32,8 +32,8 @@
   </div>
 </nav>
 <div style="position: absolute; width: 100%; height: 100%;">
-  <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" style="position: absolute; width: 100%; height: 100%;">
-    <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
+  <object data="/pictures/BraetonBuckleyResume2024.pdf" type="application/pdf" style="position: absolute; width: 100%; height: 100%;">
+    <p><a href="/pictures/BraetonBuckleyResume2024.pdf"> Download Resume PDF</a></p>
   </object>
 </div>
 
