--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-<body style="overflow: hidden; margin: 10px auto; max-width: 750px; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
+<body style="margin: 10px auto; max-width: 750px; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -37,10 +37,10 @@
 <h3><b> Email:</b> braetonbuckley@gmail.com</h3>
 <h3><b> Phone:</b> 714-904-2063</h3>
 <div class="row">
-  <div class="col-xs-6 col-md-1">  
+  <div class="col-xs-6 col-md-3">  
     <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.jpg" class="img-responsive" alt="LinkedIn" width="100" height="100"></a>
   </div>  
-  <div class="col-xs-6 col-md-1">  
+  <div class="col-xs-6 col-md-3">  
     <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.png" class="img-responsive" alt="GitHub" width="100" height="100"></a>
   </div>
 </div>
