--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-<body style="overflow: hidden; margin: 10px auto; max-width: 750px; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
+<body style="margin: 10px auto; max-width: 750px; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -34,23 +34,23 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-12 col-md-3">
+    <div class="col-xs-12 col-md-6">
       <h3 style="margin-left: 10;"><a href="https://www.myinnoacademy.com/about/ourvision" target="_blank">Innovation Academy</a></h3>
     </div>
-    <div class="col-xs-6 col-md-1">  
+    <div class="col-xs-6 col-md-3">  
       <a href="https://www.myinnoacademy.com/about/ourvision" target="_blank"><img src="pictures/innovation_logo.png" class="img-responsive" alt="Innovation" width="120" height="60"></a>
     </div>
   </div>
   <h4 style="margin-left: 20;">Math & Computer Science Tutor | Fullerton, CA | December 2023 - Present</h4>
   <p style="margin-left: 30;">Part-time tutor K-8 students in Math and Computer Science concepts.</p>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://www.jetheaddev.com/"><img src="pictures/jethead_logo.png" class="img-responsive" alt="JetHead" width="130" height="40"></a>
       </div>  
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://www.directv.com"><img src="pictures/directv_logo.svg" class="img-responsive" alt="DirecTV" width="130" height="40"></a>
       </div>
     </div>
@@ -75,13 +75,13 @@
     <p style="margin-left: 40;"><i>Contact info can be requested from Braeton Buckley, or directly from <a href="https://www.jetheaddev.com/#contact" target="_blank">JetHead</a>.</i></p>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://www.jaclpsw.org/" target="_blank"><img src="pictures/pswlogo.png" class="img-responsive" alt="PSW" width="120" height="60"></a>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://jacl.org/" target="_blank"><img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60"></a>
       </div>
     </div>
@@ -95,10 +95,10 @@
     <h5 style="margin-left: 30;">Jennifer Betancourt, Youth Advisor, Riverside JACL</h5>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://www.ucr.edu/" target="_blank">University of California, Riverside</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://www.ucr.edu/" target="_blank"><img src="pictures/ucr_logo.png" class="img-responsive" alt="UCR" width="60" height="60"></a>
       </div>
     </div>
@@ -111,10 +111,10 @@
       Technical Communications, Virtual Reality</p>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://incsocal.weebly.com/about.html" target="_blank">Intercollegiate Nikkei Council</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://incsocal.weebly.com/about.html" target="_blank"><img src="pictures/inc.jpg" class="img-responsive" alt="INC" width="60" height="60"></a>
       </div>
     </div>
@@ -124,10 +124,10 @@
       network between NSUs, and manage their respective NSUs totaling 1000+ general members.</p>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank">UCR Nikkei Student Union</a></h3>
       </div>
-      <div class="col-xs-6 col-md-1">  
+      <div class="col-xs-6 col-md-3">  
         <a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank"><img src="pictures/ucrnsu.jpeg" class="img-responsive" alt="UCRNSU" width="60" height="60"></a>
       </div>
     </div>
@@ -137,7 +137,7 @@
       Managed a board of 9 individuals who worked together to run UCR NSU with 100+ active members.</p>
     <hr>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
+      <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://goo.gl/maps/sr11Z84DwdpBKzCG6" target="_blank">The Laptop Experts</a></h3>
       </div>
     </div>
