--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-<body style="overflow: hidden; margin: 10px auto; max-width: 750px; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
+<body style="margin: 10px auto; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
